# python-annict

./: .flake8  .pre-commit-config.yaml  Bakefile  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
annict/: __init__.py  api.py  auth.py  caches.py  client.py  cursor.py  cursors.py  exceptions.py  models.py  parsers.py  services.py  utils.py
annict/tests/: test_auth.py
docs/: Makefile  annict.rst  conf.py  environment.yml  index.rst  make.bat  modules.rst  user.rst
docs/_gen/: annict.api.API.activities.rst  annict.api.API.create_record.rst  annict.api.API.delete_record.rst  annict.api.API.edit_record.rst  annict.api.API.episodes.rst  annict.api.API.followers.rst  annict.api.API.following.rst  annict.api.API.following_activities.rst  annict.api.API.me.rst  annict.api.API.my_programs.rst  annict.api.API.my_works.rst  annict.api.API.records.rst  annict.api.API.rst  annict.api.API.search_users.rst  annict.api.API.set_status.rst  annict.api.API.works.rst
news/: 1.vendor  11.feature  2.vendor  21.doc  21.feature  3.vendor
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_client.py  test_cursors.py  test_models.py  test_parser.py  test_services.py  test_utils.py
