[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "annict"
version = "0.7.0"
description = "Annict API for python"
readme = "README.md"
authors = ["kk6 <hiro.ashiya@gmail.com>"]
homepage = "https://annict.jp/userland/projects/7"
repository = "https://github.com/kk6/python-annict"
documentation = "https://python-annict.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.6"
rauth = "^0.7.3"
requests = "^2.21"
requests-cache = ">=0.4.13,<0.6.0"
furl = "^2.0"
arrow = ">=0.12.1,<0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-flake8 = "^1.0"
responses = "^0.10.15"
pytest-runner = "^5.3"
towncrier = {version = "^19.2", optional = true}
tox = "^3.19"
sphinx = {version = "^3.1", optional = true}
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
pre-commit = {version = "^2.1", optional = true}

[tool.poetry.extras]
travis-ci = ["codecov"]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]
pre-commit = ["pre-commit"]
news = ["towncrier"]

[tool.towncrier]
package = "annict"
filename = "CHANGELOG.rst"
directory = "news/"
template = "news/_template.rst"

  [[tool.towncrier.type]]
  directory = "behavior"
  name = "Behavior Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Deprecations and Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Vendored Libraries"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial Changes"
  showcontent = false
